@@ -218,6 +218,8 @@ Entry { filename = "qscan.nse", categories = { "discovery", "safe", } }
 Entry { filename = "quake3-info.nse", categories = { "default", "discovery", "safe", "version", } }
 Entry { filename = "quake3-master-getservers.nse", categories = { "default", "discovery", "safe", } }
 Entry { filename = "realvnc-auth-bypass.nse", categories = { "auth", "default", "safe", } }
+Entry { filename = "redis-brute.nse", categories = { "brute", "intrusive", } }
+Entry { filename = "redis-info.nse", categories = { "discovery", "safe", } }
 Entry { filename = "resolveall.nse", categories = { "discovery", "safe", } }
 Entry { filename = "reverse-index.nse", categories = { "safe", } }
 Entry { filename = "rexec-brute.nse", categories = { "brute", "intrusive", } }
